Fixed Navbar collapse

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-image: url(../Images/Home1.jpg);
     background-size: cover;
-    height: 100vh;
+    height: 125vh;
     width: 100%;
     z-index: -1;
 }
